mobile tooltip z-index fix

--- a/components/organisms/GlobeDataTestSection/GlobeDataTestSection.module.scss
+++ b/components/organisms/GlobeDataTestSection/GlobeDataTestSection.module.scss
@@ -14,6 +14,10 @@
         position: relative;
         padding-top: 0;
     }
+
+    @include mq(md) {
+        z-index: unset;
+    }
 }
 
 .stats {
